# btcxvm-study

./: .gitignore  .gitmodules  Readme.md
bee-vm/: Cargo.toml  Scripts.md  lcov.info
bee-vm/src/: errors.rs  lib.rs  main.rs
bee-vm/src/opcodes/: abs.rs  add.rs  add1.rs  bool_and.rs  bool_or.rs  control_flow.rs  mod.rs  negate.rs  new_num.rs  num_equal.rs  num_not_equal.rs  op_equal.rs  op_reserved.rs  op_return.rs  op_true.rs  sub.rs  sub1.rs  utils.rs  verify.rs  zero_not_equal.rs
bee-vm/src/opcodes/arithmetic/: abs.rs  add.rs  bool_and.rs  bool_or.rs  greater_than.rs  greater_than_or_equal.rs  less_than.rs  less_than_or_equal.rs  max.rs  min.rs  mod.rs  negate.rs  not.rs  num_equal.rs  num_not_equal.rs  op_false.rs  sub.rs  verify.rs  within.rs
bee-vm/src/opcodes/arithmetic_ops/: abs.rs  add.rs  add1.rs  bool_and.rs  bool_or.rs  greater_than.rs  greater_than_or_equal.rs  less_than.rs  less_than_or_equal.rs  max.rs  min.rs  mod.rs  negate.rs  not.rs  num_equal.rs  num_not_equal.rs  op_false.rs  op_true.rs  sub.rs  sub1.rs  verify.rs  within.rs
bee-vm/src/opcodes/crypto_ops/: check_sig.rs  mod.rs  op_check_multi_sig.rs  ripe_md_160.rs  sha_1.rs  sha_256.rs
bee-vm/src/opcodes/stack/: depth.rs  drop.rs  dup.rs  from_alt_stack.rs  if_dup.rs  mod.rs  nip.rs  over.rs  pick.rs  roll.rs  to_alt_stack.rs
bee-vm/src/opcodes/stack_ops/: depth.rs  drop.rs  (+13 more)
bee-vm/src/processor/: input.rs
bee-vm/src/stack/: executor.rs  executor_utils.rs  flow_tests.rs  mod.rs  stack.rs
bee-vm/src/tests/: basic_script_test.rs  flow_tests.rs  mod.rs
bee-vm/src/utils/: mod.rs
(+33 files in other folders)
