[package]
name = "bee-vm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.3"
colored = "2.1.0"
hex = "0.4.3"
rstest = "0.21.0"
thiserror = "1.0.63"
tokio = "1.39.2"
log = "0.4.22"
env_logger = "0.11.5"
