[package]
name = "bee-vm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Common Deps :

color-eyre = "0.6.3"
colored = "2.1.0"
hex = "0.4.3"
rstest = "0.23.0"
thiserror = "1.0.63"
tokio = "1.39.2"
log = "0.4.22"
env_logger = "0.11.5"

# Crypto Deps :
k256 = { version = "0.13", features = ["serde"] }
sha2 = "0.10.0"
ripemd = "0.1.3"
sha1 = "0.10.6"
